2011-04-09  David Levin  <levin@chromium.org>

        Unreviewed, rolling out r83394.
        http://trac.webkit.org/changeset/83394
        https://bugs.webkit.org/show_bug.cgi?id=53625

        Patch was incorrect as noted in the bug.

        * Scripts/svn-apply:

2011-04-09  David Levin  <levin@chromium.org>

        Reviewed by Adam Barth.

        svn-apply and/or patch(1) has trouble applying patches that makes changes to files with Windows line endings
        https://bugs.webkit.org/show_bug.cgi?id=53625

        * Scripts/svn-apply: Ensure that the portions of patches
        which are for vcproj/vsprops files has DOS line endings.

2011-04-09  Dirk Pranke  <dpranke@chromium.org>

        Reviewed by Tony Chang.

        It looks like NRWT has not been stopping DRT/TestShell
        instances properly on windows, probably for a long time.
        This would go a long way to explaining why we often have
        processes lying around :)

        https://bugs.webkit.org/show_bug.cgi?id=57807

        * Scripts/webkitpy/layout_tests/port/chromium.py:
        * Scripts/webkitpy/layout_tests/port/chromium_unittest.py:

2011-04-09  Keith Kyzivat  <keith.kyzivat@nokia.com>

        Reviewed by Laszlo Gombos.

        [Qt] Don't link against fontconfig or X11 if embedded
        https://bugs.webkit.org/show_bug.cgi?id=58104

        * DumpRenderTree/qt/DumpRenderTree.pro: fontconfig !included in embedded
        * QtTestBrowser/QtTestBrowser.pro: ditto
        * WebKitTestRunner/InjectedBundle/qt/InjectedBundle.pro: ditto
        * WebKitTestRunner/qt/WebKitTestRunner.pro: ditto

2011-04-08  Jon Honeycutt  <jhoneycutt@apple.com>

        http/tests/loading/preload-append-scan.php is failing on Windows
        https://bugs.webkit.org/show_bug.cgi?id=58178

        Reviewed by Brian Weinstein.

        * DumpRenderTree/win/DumpRenderTree.cpp:
        (lastPathComponent):
        Use CFURL API to find the last path component, rather than